[gd_scene load_steps=7 format=3 uid="uid://c662v27l0g0e5"]

[ext_resource type="Script" uid="uid://c350mk68j27n7" path="res://Scripts/player.gd" id="1_6t5aa"]
[ext_resource type="Texture2D" uid="uid://y80k3hiol4hq" path="res://Assests/art/playerGrey_walk1.png" id="1_v7yw2"]
[ext_resource type="Texture2D" uid="uid://dm4gufakstww6" path="res://Assests/art/playerGrey_walk2.png" id="2_5upm3"]
[ext_resource type="Script" uid="uid://cknkdxdydpieg" path="res://Scripts/hook_raycast.gd" id="4_vgqql"]

[sub_resource type="SpriteFrames" id="SpriteFrames_wxjh7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_v7yw2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_v7yw2")
}, {
"duration": 1.0,
"texture": ExtResource("2_5upm3")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7hfh"]
radius = 27.0
height = 68.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_6t5aa")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_wxjh7")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_u7hfh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -86)

[node name="HookRayCast" type="Node2D" parent="."]
script = ExtResource("4_vgqql")

[node name="JumpHeightTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="JumpHeightTimer" to="." method="_on_jump_height_timer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
